Potential fix for mobile nav being briefly visible on page load

--- a/src/components/MainHeader/MainHeader.module.scss
+++ b/src/components/MainHeader/MainHeader.module.scss
@@ -157,7 +157,6 @@ $mainNavZIndex: 1000;
     height: 100%;
     background-color: $color-body-bg-dark;
     transform: translateX(-100%);
-    transition: transform .3s, box-shadow .3s;
     z-index: $mainNavZIndex + 2;
     display: flex;
     flex-direction: column;
@@ -165,10 +164,16 @@ $mainNavZIndex: 1000;
     padding-bottom: 1rem;
     overflow-y: auto;
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.5);
-
+    opacity: 0;
+    // transition applied during hide animation
+    transition: transform .3s, box-shadow .3s, opacity 0s 0.3s;
+    
     &.show {
         transform: translateX(0);
         box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.5);
+        opacity: 1;
+        // transition applied during show animation
+        transition: transform .3s, box-shadow .3s, opacity 0s;
     }
 
     .navLinks {
